2010-07-02  Robert Larice
 * src/spicelib/analysis/cktsens.c ,
 * src/xspice/mif/mifload.c :
		ansi style function args for some function pointers

2010-07-02  Holger Vogt
 * src/frontend/inpcom.c :  .TITLE line added
 * /bsim3soi/b4soild.c, b4soiset., b4soidef.h, DEVICES: OpenMP support for
   SOI model B4SOI, version 4.3.1.

2010-07-01  Holger Vogt
 * src/frontend/inpcom.c :  no removal of white spaces in echo lines
   inside a control section

2010-07-01  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/frontend/display.c ,
 * src/frontend/help/readhelp.c ,
 * src/frontend/help/x11disp.c ,
 * src/frontend/hpgl.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/measure.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/frontend/parser/complete.c ,
 * src/frontend/plotting/agraf.c ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/x11.c ,
 * src/frontend/postsc.c ,
 * src/frontend/quote.c ,
 * src/frontend/subckt.c ,
 * src/maths/ni/niinteg.c ,
 * src/maths/ni/niiter.c ,
 * src/misc/dstring.c ,
 * src/misc/string.c ,
 * src/misc/util.c ,
 * src/misc/wlist.c ,
 * src/spicelib/analysis/ckttroub.c ,
 * src/spicelib/analysis/distoan.c ,
 * src/spicelib/analysis/noisean.c ,
 * src/spicelib/devices/bjt/bjtask.c ,
 * src/spicelib/devices/bjt2/bjt2ask.c ,
 * src/spicelib/devices/cap/capask.c ,
 * src/spicelib/devices/cccs/cccsask.c ,
 * src/spicelib/devices/ccvs/ccvsask.c ,
 * src/spicelib/devices/cpl/cplsetup.c ,
 * src/spicelib/devices/csw/cswask.c ,
 * src/spicelib/devices/dio/dioask.c ,
 * src/spicelib/devices/dio/diotemp.c ,
 * src/spicelib/devices/hfet1/hfetask.c ,
 * src/spicelib/devices/hfet2/hfet2ask.c ,
 * src/spicelib/devices/ind/indask.c ,
 * src/spicelib/devices/isrc/isrcask.c ,
 * src/spicelib/devices/jfet/jfetask.c ,
 * src/spicelib/devices/jfet2/jfet2ask.c ,
 * src/spicelib/devices/mes/mesask.c ,
 * src/spicelib/devices/mesa/mesaask.c ,
 * src/spicelib/devices/mos1/mos1ask.c ,
 * src/spicelib/devices/mos2/mos2ask.c ,