@@ -8,13 +8,17 @@ Author: 1985 Thomas L. Quarles
 
 #include "ifsim.h"
 
+typedef struct GENinstance GENinstance ;
+typedef struct GENmodel GENmodel;
+
+
         /* definitions used to describe generic devices */
 
 /* information used to describe a single instance */
 
-typedef struct sGENinstance {
-    struct sGENmodel *GENmodPtr;    /* backpointer to model */
-    struct sGENinstance *GENnextInstance;   /* pointer to next instance of 
+struct GENinstance {
+    GENmodel *GENmodPtr;    /* backpointer to model */
+    GENinstance *GENnextInstance;   /* pointer to next instance of 
                                              * current model*/
     IFuid GENname;  /* pointer to character string naming this instance */
     int GENowner;   /* number of owner process */
@@ -26,7 +30,7 @@ typedef struct sGENinstance {
     int GENnode5;   /* appropriate node numbers */
     int GENnode6;   /* added to create body node 01/06/99 */
     int GENnode7;   /* added to create temp node  2/03/99 */
-} GENinstance ;
+};
 
 
 /* Generic circuit data */
@@ -35,13 +39,13 @@ typedef void GENcircuit;
 
 /* per model data */
 
-typedef struct sGENmodel {       /* model structure for a resistor */
+struct GENmodel {       /* model structure for a resistor */
     int GENmodType; /* type index of this device type */
-    struct sGENmodel *GENnextModel; /* pointer to next possible model in 
+    GENmodel *GENnextModel; /* pointer to next possible model in 
                                      * linked list */
     GENinstance * GENinstances; /* pointer to list of instances that have this
                                  * model */
     IFuid GENmodName;       /* pointer to character string naming this model */
-} GENmodel;
+};
 
 #endif /*GEN*/
